apps/home-assistant/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: home-assistant
  hostnames:
    - home-assistant.kakatkarakshay.dev
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forward-auth
  namespace: home-assistant
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/
    trustForwardHeader: true
    maxResponseBodySize: 1048576
    addAuthCookiesToResponse:
      - _cloudlab_oauth2_proxy
    authResponseHeaders:
      - Authorization
      - X-Auth-Request-Access-Token
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-User
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
  namespace: home-assistant
spec:
  parentRefs:
    - name: node-red
  hostnames:
    - node-red.kakatkarakshay.dev
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-forward-auth
      backendRefs:
        - name: node-red
          port: 1880
